BigDecimal fix